# stohr

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  INTEGRATIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  biome.json  caddyfile  compose.yaml  package.json  tsconfig.json
.do/: app.yaml
apps/desktop/: README.md  pubspec.yaml
apps/mobile/: README.md  pubspec.yaml
desktop/: README.md  butter.yaml  package.json  tsconfig.json
desktop/src/: env.d.ts
docs/: ACTIONS.md  ADMIN.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOY.md  OAUTH.md  PAYMENTS.md  README.md  S3.md  SDKS.md
libs/bai/: AGENTS.md  README.md  index.ts  package.json  tsconfig.json
libs/bai/native/rust/: Cargo.toml
libs/bai/native/rust/src/: lib.rs
migrations/00000001_create_users/: up.sql
migrations/00000002_create_folders/: up.sql
migrations/00000003_create_files/: up.sql
migrations/00000004_create_shares/: up.sql
migrations/00000005_soft_deletes/: down.sql  up.sql
migrations/00000006_file_versions/: down.sql  up.sql
migrations/00000007_pg_trgm_indexes/: down.sql  up.sql
migrations/00000008_file_thumbnails/: down.sql  up.sql
migrations/00000009_collab_and_invites/: down.sql  up.sql
mobile/: README.md  analysis_options.yaml  pubspec.yaml
scripts/: setup.ts  update.ts
sdks/: README.md
src/: server.ts  start.ts
tests/: README.md  account_deletion.test.ts  apps.test.ts  auth.test.ts  discoverability.test.ts  oauth.test.ts  oauth_device.test.ts  quotas.test.ts  ratelimit.test.ts  sessions.test.ts  setup.ts  shares.test.ts  totp.test.ts
(+585 files in other folders)
