[package]
name = "bai"
version = "0.0.1"
edition = "2021"

[lib]
name = "bai"
crate-type = ["cdylib"]

[dependencies]
# llama-cpp-2 is the maintained Rust binding around upstream llama.cpp.
# It vendors a recent llama.cpp via llama-cpp-sys-2 and exposes safe
# wrappers around model loading, context management, embedding, and
# token sampling. We keep the FFI surface deliberately small and let
# this crate handle the messy parts.
llama-cpp-2 = { version = "0.1", default-features = false }
once_cell = "1"

[features]
default = ["cpu"]
cpu = []
metal = ["llama-cpp-2/metal"]      # macOS GPU
cuda  = ["llama-cpp-2/cuda"]       # Linux NVIDIA
vulkan = ["llama-cpp-2/vulkan"]    # Cross-platform GPU

[profile.release]
lto = true
codegen-units = 1
strip = true
